
Version 0.3.2dev (TBA)
======================

Enhancements:

Internal changes

Fixes:


Version 0.3.1dev (9 Jan 2010)
=============================

Enhancements:

  * Fuzzy file finder.
  * Directory tree refreshes on window focus.
  * Keybindings to switch tabs and notebooks.
  * Undo/redo.
  * Home/end keys.
  * Modified tabs have little stars before their names.
  * Increase indent and decrease indent commands (need further work).
  * Themes support bold, italic and underline again.
  * All commands are greyed out when inapplicable.
  * Files can not be opened twice.
  * Added Java, Perl and Ruby on Rails bundles.
  * New simpler way for bundles to add commands to menus (used in repl.rb)
  * New "redcar install" command to download jars.
  
Fixes:

  * Change key logic in JavaMateView - should fix a bunch of subtle highlighting bugs.
  * Runs on Java 5.
  * Open Directory doesn't log an error if you cancel.

Version 0.3.0dev (25 Dec 2009)
==============================

Rewritten in JRuby/SWT.

Enhancements:
  
  * _Much_ simpler installation: packaged as a gem.
  * Faster highlighter
  * Fewer bugs
  * Clearer architecture
  * Multiple window/project support.


Version 0.2 (28 May 2009)
=========================

New features, enhancements:

  * Fuzzy file finder notices new files and runs MUCH faster.
  * Undo close tab (Ctrl+Shift+T)
  * Type " or ( or [ etc to wrap selection in pair.
  * Warm startup 3 times faster.
  * Added Incremental Search menu item.
  * Now prompts to save if file is modified when closed.
  * HtmlTab now uses Webkit instead of Mozilla
  * Convert case commands
  * Keybindings match up with Gnome better (Ctrl+C/V)
  * Added Scala and Haskell bundles.
  * Added theme from Railscasts

Bug fixes:

  * Fixed Jaunty DBus bug (no more --multiple-instance!) (#60)
  * Fixed paste-over bug (#74)
  * Fixed bug that allows multiple project tabs (#69)
  * Fixed so only one copy of a file can be open (#62)