@@ -13,6 +13,7 @@ module Redcar
       @edit_view = Redcar::EditView.new(self)
       @edit_view.add_listener(:focussed, &method(:edit_view_focussed))
       @edit_view.document.add_listener(:changed) { notify_listeners(:changed, self) }
+      @edit_view.document.add_listener(:selection_range_changed) { notify_listeners(:selection_changed) }
     end
     
     def edit_view_focussed
